Add join us and update inaugural event date

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,7 @@
   url: /
 - text: Team
   url: /pages/open-positions
+- text: Join Us
+  url: /pages/join-us
 - text: Contact
   url: /pages/contact
