--- a/_data/slider.yml
+++ b/_data/slider.yml
@@ -1,6 +1,6 @@
 
 - title: "IISc ACM Student Chapter"
-  button_label: "Join"
-  button_link: "/pages/open-positions"
+  button_label: "Join Us"
+  button_link: "/pages/join-us"
 
 
